# icicle

./: Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
.ci/: install.sh
.github/workflows/: build.yml  release.yml
.graal/: resource-config.json
sample/: icicle.yml
src/: main.rs
src/main/kotlin/com/nishtahir/icicle/: ChainedClosable.kt  Cli.kt  Environment.kt  Main.kt  Manifest.kt  ScriptExecutor.kt  ToolchainDownloader.kt
